---------------------------------------------------------------------------------------------------
Version: 4.1.20
Date: 2022.04.XX
  Features:
    - DiscoScience support for compressed science packs
  Bugfixes:
    - Fix failure to load with techs that use .normal/.expensive
---------------------------------------------------------------------------------------------------
Version: 4.1.19
Date: 2022.02.27
  Bugfixes:
    - Fix non-void recipes with "void" in the name not getting compressed
    - Fix that the probability of expensive recipes that had the same item more than once in their
      results table was wrongly applied to each individual result
    - Fix accidentally overwriting inputs on labs
---------------------------------------------------------------------------------------------------
Version: 4.1.18
Date: 2022.02.14
  Changes:
    - Compressed technologies now form a "tree" with proper prerequisites for queueing
    - Compressed items of buildings (tiered) now stack up to original stacksize / compression mult
  Bugfixes:
    - Fix void recipes with quantity > 0 but probability 0 not getting compressed variants
---------------------------------------------------------------------------------------------------
Version: 4.1.17
Date: 2022.02.06
  Bugfixes:
    - Fixed a crash when trying to compress infinite ores with low yield
---------------------------------------------------------------------------------------------------
Version: 4.1.16
Date: 2022.02.05
  Changes:
    - Added omnidatetechs chat command
  Bugfixes:
    - No longer tries to add next_upgrade to entitites marked as not upgradable
---------------------------------------------------------------------------------------------------
Version: 4.1.15
Date: 2022.02.05
  Features:
    - Compressed buildings can now be fast-replaced and upgrade-planner'd
  Changes:
    - Added descriptions to condensator/concentrator